# BigClaw

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  local-issues.json  pyproject.toml  setup.py  workflow.md
.githooks/: post-commit  post-rewrite
.symphony/: BIG-GO-1005-batch-report.md  BIG-GO-1533-evidence.md  BIG-GO-1537-evidence.md  big-go-1127-audit.md  evidence-BIG-GO-1547.md  evidence-BIG-GO-1552.md  workpad.md
bigclaw-go/: .gitignore  README.md  go.mod  go.sum
docs/: BigClaw-AgentHub-Integration-Alignment.md  big-go-924-governance-migration.md  go-cli-script-migration-plan.md  go-domain-intake-parity-matrix.md  go-mainline-cutover-handoff.md  go-mainline-cutover-issue-pack.md  go-mainline-merge-plan.md  go-only-migration-plan.md  go-only-repo-cutover.md  go-python-build-surface-cutover.md  issue-plan.md  local-tracker-automation.md  openclaw-parallel-gap-analysis.md  parallel-refill-queue-metadata.md  parallel-refill-queue.json  parallel-refill-queue.md  repo-governance-board-migration.md  symphony-repo-bootstrap-template.md
reports/: BIG-FOUNDATION-validation.md  BIG-GO-1-validation.md  BIG-GO-10-closeout.md  BIG-GO-10-status.json  BIG-GO-10-validation.md  BIG-GO-100-status.json  BIG-GO-100-validation.md  BIG-GO-1002-closeout.md  BIG-GO-1005-validation.md  BIG-GO-1008-validation.md  BIG-GO-101-status.json  BIG-GO-101-validation.md  BIG-GO-1011-closeout.md  BIG-GO-1011-status.json  BIG-GO-1011-validation.md  BIG-GO-1021.md  BIG-GO-1022-closeout.md  BIG-GO-1022-pr.md  BIG-GO-1034-validation.md  BIG-GO-1036-validation.md  BIG-GO-104-status.json  BIG-GO-104-validation.md  BIG-GO-1044-closeout.md  BIG-GO-1044-status.json  BIG-GO-1044-validation.md  BIG-GO-1051-closeout.md  BIG-GO-1051-status.json  BIG-GO-1051-validation.md  BIG-GO-1052-closeout.md  BIG-GO-1052-pr.md  BIG-GO-1052-status.json  BIG-GO-1052-validation.md  BIG-GO-1053-closeout.md  BIG-GO-1053-status.json  BIG-GO-1053-validation.md  BIG-GO-1055-closeout.md  BIG-GO-1055-status.json  BIG-GO-1055-validation.md  (+1112 more)
(+2336 files in other folders)
