[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigclaw"
version = "0.1.0"
description = "BigClaw v1.0 engineering & ops execution platform (MVP)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "pre-commit>=3.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
  # These shell-named migration shims forward into the Go CLI and are not Python sources.
  "scripts/ops/bigclaw_github_sync.py",
  "scripts/ops/bigclaw_refill_queue.py",
  "scripts/ops/bigclaw_workspace_bootstrap.py",
  "scripts/ops/symphony_workspace_bootstrap.py",
  "scripts/ops/symphony_workspace_validate.py",
]

[tool.ruff.lint]
# Keep lint as a stable baseline for this repo without mass-formatting legacy files.
select = ["E9", "F63", "F7", "F82"]
ignore = []
